--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.html
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.html
@@ -1,16 +1,16 @@
 <section class="row">
-<h1>Welcome to Bakeli Talents</h1>
 <div class="container">
-    <div class="card form-content col-md-6 offset-md-4">
-        <div class="card-header cardheader">
+    <h1 class="header">Welcome to Bakeli Talents</h1>
+    <div class="card form-content col-md-6 offset-md-4 shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="card-header">
     <h1>
-        <span class="fa fa-sign-in fa-8x"></span>&nbsp;&nbsp;Connexion</h1>
+        <span class="fa fa-user-plus fa-4x"></span>&nbsp;&nbsp;Inscription</h1>
         </div>
-    <div class="ui inverted form">
+    <div class="ui inverted form form-in">
       <div class="two fields">
         <div class="field">
-          <label>First Name</label>
-          <input placeholder="First Name" type="text">
+          <label>Prenom</label>
+          <input placeholder="Prenom"  name="first_name" type="text">
         </div>
         <div class="field">
           <label>Last Name</label>
@@ -20,28 +20,28 @@
       <div class="two fields">
           <div class="field">
             <label>Email</label>
-            <input placeholder="email" type="text">
+            <input placeholder="Email" type="text">
           </div>
           <div class="field">
             <label>Telephone</label>
-            <input placeholder="phone" type="text">
+            <input placeholder="Phone" type="text">
           </div>
         </div>
       <div class="field">
-          <label>Billing Address</label>
+          <label>Adresse</label>
           <div class="fields">
             <div class="twelve wide field">
-              <input type="text" name="shipping[address]" placeholder="Street Address">
+              <input type="text" name="address" placeholder=" Adresse">
             </div>
             </div>
             <div class="two fields">
                 <div class="field">
                   <label>Raison Sociale</label>
-                  <input placeholder="email" type="text">
+                  <input placeholder= "Raison Sociale" nom="raison_sociale" type="text">
                 </div>
                 <div class="field">
                   <label>Domaine Professionnel</label>
-                  <input placeholder="phone" type="text">
+                  <input placeholder="Domaine Professionnel" nom="domaine_pro" type="text">
                 </div>
               </div>
       <div class="inline field">
