--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.html
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.html
@@ -1,7 +1,7 @@
 <section class="row">
 <div class="container">
     <h1 class="header">Welcome to Bakeli Talents</h1>
-    <div class="card form-content col-md-6 offset-md-4 shadow-lg p-3 mb-5 bg-white rounded">
+    <div class="card form-content col-md-6 offset-md-3 shadow-lg p-3 mb-5 bg-white rounded">
         <div class="card-header">
     <h1>
         <span class="fa fa-user-plus fa-4x"></span>&nbsp;&nbsp;Inscription</h1>
@@ -10,46 +10,46 @@
       <div class="two fields">
         <div class="field">
           <label>Prenom</label>
-          <input placeholder="Prenom"  name="first_name" type="text">
+          <input  class="input" placeholder="Prenom"  name="first_name" type="text">
         </div>
         <div class="field">
           <label>Last Name</label>
-          <input placeholder="Last Name" type="text">
+          <input class="input" placeholder="Last Name" type="text">
         </div>
       </div>
       <div class="two fields">
           <div class="field">
             <label>Email</label>
-            <input placeholder="Email" type="text">
+            <input class="input" placeholder="Email" type="text">
           </div>
           <div class="field">
             <label>Telephone</label>
-            <input placeholder="Phone" type="text">
+            <input class="input"  placeholder="Phone" type="text">
           </div>
         </div>
       <div class="field">
           <label>Adresse</label>
           <div class="fields">
-            <div class="twelve wide field">
-              <input type="text" name="address" placeholder=" Adresse">
+            <div class="sixteen wide field">
+              <input class="input" type="text" name="address" placeholder=" Adresse">
             </div>
             </div>
             <div class="two fields">
                 <div class="field">
                   <label>Raison Sociale</label>
-                  <input placeholder= "Raison Sociale" nom="raison_sociale" type="text">
+                  <input class="input" placeholder= "Raison Sociale" nom="raison_sociale" type="text">
                 </div>
                 <div class="field">
                   <label>Domaine Professionnel</label>
-                  <input placeholder="Domaine Professionnel" nom="domaine_pro" type="text">
+                  <input class="inputstyle" placeholder="Domaine Professionnel" nom="domaine_pro" type="text">
                 </div>
               </div>
-      <div class="inline field">
+      <!-- <div class="inline field">
         <div class="ui checkbox">
           <input type="checkbox" tabindex="0" class="hidden">
           <label>I agree to the terms and conditions</label>
         </div>
-      </div>
+      </div> -->
       <div class="ui submit button">Submit</div>
     </div>
   </div>
