--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.css
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.css
@@ -2,7 +2,7 @@
     color: white;
     align-content: center;
     padding: 3px;
-    background-color: #f44336 !important;
+    border: 1px solid #ff9800;
 }
 
 .form-in{
@@ -18,4 +18,15 @@ label{
 text-align: center;
 text-transform: uppercase;
 color: #f44336;
+}
+
+.card-header
+{
+    align-content: center;
+    background-color: #ff9800 !important;
+}
+
+.inputstyle
+{
+    border: 1px solid #ff9800;
 }
