Domaines changer couleur

--- a/src/app/components/domaines/domaines.component.html
+++ b/src/app/components/domaines/domaines.component.html
@@ -6,8 +6,12 @@
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 				<a href="">	<div class="box-part text-center">
-            <img src="https://img.icons8.com/ios/50/000000/business.png">						<div class="title">
-							<h3>Business</h3>
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+          width="50" height="50"
+          viewBox="0 0 192 192"
+          style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#ff9800"><g id="surface1"><path d="M96,7.68c-17.7,0 -31.86,9.855 -34.2,23.04h-50.28c-6.345,0 -11.52,5.175 -11.52,11.52v65.28c0,2.115 1.725,3.84 3.84,3.84h72.96c0,-6.345 5.175,-11.52 11.52,-11.52h15.36c6.345,0 11.52,5.175 11.52,11.52h72.96c2.115,0 3.84,-1.725 3.84,-3.84v-65.28c0,-6.345 -5.175,-11.52 -11.52,-11.52h-50.28c-2.34,-13.185 -16.5,-23.04 -34.2,-23.04zM96,15.36c13.245,0 24,6.48 26.4,15.36h-52.8c2.4,-8.88 13.155,-15.36 26.4,-15.36zM88.32,107.52c-2.115,0 -3.84,1.725 -3.84,3.84v7.68c0,2.115 1.725,3.84 3.84,3.84h15.36c2.115,0 3.84,-1.725 3.84,-3.84v-7.68c0,-2.115 -1.725,-3.84 -3.84,-3.84zM0,118.32v54.48c0,6.345 5.175,11.52 11.52,11.52h168.96c6.345,0 11.52,-5.175 11.52,-11.52v-54.48c-1.2,0.435 -2.49,0.72 -3.84,0.72h-72.96c0,6.345 -5.175,11.52 -11.52,11.52h-15.36c-6.345,0 -11.52,-5.175 -11.52,-11.52h-72.96c-1.35,0 -2.64,-0.285 -3.84,-0.72z"></path></g></g></g></svg>    				<div class="title">
+              <h3>Business</h3>
+              <hr>
 						</div>
 						<div class="text">
 							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
@@ -18,8 +22,12 @@
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<a href=""> <div class="box-part text-center">
-            <img src="https://img.icons8.com/ios/50/000000/design.png">            <div class="title">
-							<h3>Design</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="50" height="50"
+            viewBox="0 0 192 192"
+            style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#ff9800"><g id="surface1"><path d="M38.16,2.04l-36.12,36.12l57.36,57.12l36,-36l-5.52,-5.52l-14.16,14.28l-5.52,-5.52l14.28,-14.16l-6.12,-6.12l-10.32,10.44l-5.52,-5.52l10.44,-10.32l-6.12,-6.12l-14.16,14.28l-5.52,-5.52l14.28,-14.16l-6.12,-6.12l-10.32,10.44l-5.52,-5.52l10.44,-10.32zM165.6,7.68c-4.785,0 -9.555,1.875 -13.2,5.52l-6.84,6.72l-80.76,80.76l-47.76,47.88c-0.765,0.51 -1.32,1.275 -1.56,2.16l-7.68,28.8c-0.345,1.32 0.045,2.715 1.005,3.675c0.96,0.96 2.355,1.35 3.675,1.005l28.8,-7.68c0.645,-0.21 1.23,-0.585 1.68,-1.08l0.24,-0.12c0.18,-0.18 0.345,-0.39 0.48,-0.6l128.4,-128.28v-0.12l2.52,-2.52c1.98,-1.98 4.2,-4.2 4.2,-4.2c7.29,-7.305 7.29,-19.11 0,-26.4c-3.66,-3.645 -8.415,-5.52 -13.2,-5.52zM165.6,15.36c2.94,0 5.73,1.17 7.8,3.24c4.29,4.29 4.29,11.31 0,15.6c-0.495,0.495 -0.9,0.9 -1.32,1.32l-15.6,-15.6l1.32,-1.32c2.085,-2.085 4.86,-3.24 7.8,-3.24zM135.96,99l-10.32,10.32l-3.24,-3.24l-25.8,25.8l57.24,57.24l36.12,-36.12l-7.92,-7.92l-10.32,10.32l-5.52,-5.4l10.44,-10.44l-6.12,-6l-14.16,14.16l-5.52,-5.4l14.28,-14.28l-6.12,-6l-10.32,10.32l-5.52,-5.4l10.44,-10.44l-6.12,-6l-14.16,14.16l-5.52,-5.4l14.28,-14.28zM21.24,159.12l11.64,11.64l-15.96,4.32z"></path></g></g></g></svg>            <div class="title">
+              <h3>Design</h3>
+              <hr>
 						</div>
 						<div class="text">
 							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
@@ -33,8 +41,12 @@
 
        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 				<a href=""> 	<div class="box-part text-center">
-            <img src="https://img.icons8.com/ios/50/000000/sales-channels.png">						<div class="title">
-							<h3>Marketing digital</h3>
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+          width="50" height="50"
+          viewBox="0 0 192 192"
+          style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#ff9800"><path d="M96,7.68c-6.31684,0 -11.52,5.20316 -11.52,11.52c0,4.96573 3.23585,9.19734 7.68,10.8v27.6h7.68v-27.6c4.44415,-1.60266 7.68,-5.83427 7.68,-10.8c0,-6.31684 -5.20316,-11.52 -11.52,-11.52zM96,15.36c2.16626,0 3.84,1.67374 3.84,3.84c0,2.16626 -1.67374,3.84 -3.84,3.84c-2.16626,0 -3.84,-1.67374 -3.84,-3.84c0,-2.16626 1.67374,-3.84 3.84,-3.84zM26.88,42.24c-6.31684,0 -11.52,5.20316 -11.52,11.52c0,6.31684 5.20316,11.52 11.52,11.52c2.45435,0 4.72927,-0.79889 6.6075,-2.13l20.2725,13.125v-7.155c0,-0.54912 0.09204,-1.08258 0.165,-1.6125l-16.02,-10.6125c0.29003,-1.00459 0.495,-2.04266 0.495,-3.135c0,-6.31684 -5.20316,-11.52 -11.52,-11.52zM165.12,42.24c-6.31684,0 -11.52,5.20316 -11.52,11.52c0,1.09484 0.20369,2.13587 0.495,3.1425l-16.02,10.6125c0.07296,0.52608 0.165,1.05588 0.165,1.605v7.155l20.2725,-13.125c1.87823,1.33111 4.15315,2.13 6.6075,2.13c6.31684,0 11.52,-5.20316 11.52,-11.52c0,-6.31684 -5.20316,-11.52 -11.52,-11.52zM26.88,49.92c2.16626,0 3.84,1.67374 3.84,3.84c0,2.16626 -1.67374,3.84 -3.84,3.84c-2.16626,0 -3.84,-1.67374 -3.84,-3.84c0,-2.16626 1.67374,-3.84 3.84,-3.84zM165.12,49.92c2.16626,0 3.84,1.67374 3.84,3.84c0,2.16626 -1.67374,3.84 -3.84,3.84c-2.16626,0 -3.84,-1.67374 -3.84,-3.84c0,-2.16626 1.67374,-3.84 3.84,-3.84zM65.28,65.28c-2.11968,0 -3.84,1.72032 -3.84,3.84v53.76c0,2.12352 1.72032,3.84 3.84,3.84h61.44c2.12352,0 3.84,-1.71648 3.84,-3.84v-53.76c0,-2.11968 -1.71648,-3.84 -3.84,-3.84zM88.32,80.64h15.36c2.12352,0 3.84,1.72032 3.84,3.84c0,2.11968 -1.71648,3.84 -3.84,3.84h-15.36c-2.11968,0 -3.84,-1.72032 -3.84,-3.84c0,-2.11968 1.72032,-3.84 3.84,-3.84zM53.76,115.725l-20.2725,13.125c-1.87823,-1.33111 -4.15315,-2.13 -6.6075,-2.13c-6.31684,0 -11.52,5.20316 -11.52,11.52c0,6.31684 5.20316,11.52 11.52,11.52c6.31684,0 11.52,-5.20316 11.52,-11.52c0,-1.09484 -0.20369,-2.13587 -0.495,-3.1425l16.02,-10.6125c-0.07296,-0.52608 -0.165,-1.05588 -0.165,-1.605zM138.24,115.725v7.155c0,0.54912 -0.09204,1.08258 -0.165,1.6125l16.02,10.6125c-0.29003,1.00459 -0.495,2.04266 -0.495,3.135c0,6.31684 5.20316,11.52 11.52,11.52c6.31684,0 11.52,-5.20316 11.52,-11.52c0,-6.31684 -5.20316,-11.52 -11.52,-11.52c-2.45435,0 -4.72927,0.79889 -6.6075,2.13zM26.88,134.4c2.16626,0 3.84,1.67374 3.84,3.84c0,2.16626 -1.67374,3.84 -3.84,3.84c-2.16626,0 -3.84,-1.67374 -3.84,-3.84c0,-2.16626 1.67374,-3.84 3.84,-3.84zM92.16,134.4v27.6c-4.44415,1.60266 -7.68,5.83427 -7.68,10.8c0,6.31684 5.20316,11.52 11.52,11.52c6.31684,0 11.52,-5.20316 11.52,-11.52c0,-4.96573 -3.23585,-9.19734 -7.68,-10.8v-27.6zM165.12,134.4c2.16626,0 3.84,1.67374 3.84,3.84c0,2.16626 -1.67374,3.84 -3.84,3.84c-2.16626,0 -3.84,-1.67374 -3.84,-3.84c0,-2.16626 1.67374,-3.84 3.84,-3.84zM96,168.96c2.16626,0 3.84,1.67374 3.84,3.84c0,2.16626 -1.67374,3.84 -3.84,3.84c-2.16626,0 -3.84,-1.67374 -3.84,-3.84c0,-2.16626 1.67374,-3.84 3.84,-3.84z"></path></g></g></svg>  					<div class="title">
+              <h3>Marketing digital</h3>
+              <hr>
 						</div>
 						<div class="text">
 							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
@@ -45,8 +57,12 @@
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 				<a href="">	<div class="box-part text-center">
-            <img src="https://img.icons8.com/ios/50/000000/source-code.png">						<div class="title">
-							<h3>Programation</h3>
+          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+          width="50" height="50"
+          viewBox="0 0 192 192"
+          style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#ff9800"><g id="surface1"><path d="M111.84,28.2l-46.08,130.56l14.4,5.04l46.08,-130.56zM38.16,51.36l-33.36,39.72l-4.08,4.92l4.08,4.92l33.36,39.84l11.88,-9.84l-29.28,-34.92l29.16,-34.8zM153.84,51.36l-11.76,9.84l29.16,34.8l-29.16,34.8l11.88,9.84l33.12,-39.72l4.08,-4.92l-4.08,-4.92z"></path></g></g></g></svg>      			<div class="title">
+              <h3>Programation</h3>
+              <hr>
 						</div>
 						<div class="text">
 							<span>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</span>
