contact form ok

--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.html
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.html
@@ -7,40 +7,37 @@
         <span class="fa fa-user-plus fa-4x"></span>&nbsp;&nbsp;Inscription</h1>
         </div>
     <div class="ui inverted form form-in">
+        <hr>
       <div class="two fields">
         <div class="field">
-          <label>Prenom</label>
-          <input  class="input" placeholder="Prenom"  name="first_name" type="text">
+          <input  class="inputstyle" placeholder="Prenom"  name="first_name" type="text">
         </div>
         <div class="field">
-          <label>Last Name</label>
-          <input class="input" placeholder="Last Name" type="text">
+          <input class="inputstyle" placeholder="Last Name" type="text">
         </div>
       </div>
+      <hr>
       <div class="two fields">
           <div class="field">
-            <label>Email</label>
-            <input class="input" placeholder="Email" type="text">
+            <input class="inputstyle" placeholder="Email" type="text">
           </div>
           <div class="field">
-            <label>Telephone</label>
-            <input class="input"  placeholder="Phone" type="text">
+            <input class="inputstyle"  placeholder="Phone" type="text">
           </div>
         </div>
+        <hr>
       <div class="field">
-          <label>Adresse</label>
           <div class="fields">
             <div class="sixteen wide field">
-              <input class="input" type="text" name="address" placeholder=" Adresse">
+              <input class="inputstyle" type="text" name="address" placeholder=" Adresse">
             </div>
             </div>
+            <hr>
             <div class="two fields">
                 <div class="field">
-                  <label>Raison Sociale</label>
-                  <input class="input" placeholder= "Raison Sociale" nom="raison_sociale" type="text">
+                  <input class="inputstyle" placeholder= "Raison Sociale" nom="raison_sociale" type="text">
                 </div>
                 <div class="field">
-                  <label>Domaine Professionnel</label>
                   <input class="inputstyle" placeholder="Domaine Professionnel" nom="domaine_pro" type="text">
                 </div>
               </div>
