--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
   <app-inscription-recruteur></app-inscription-recruteur>
-
+  <app-contact-form></app-contact-form>
 <router-outlet></router-outlet>
