--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.css
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.css
@@ -1,13 +1,16 @@
 .form-content{
-    color: white;
     align-content: center;
     padding: 3px;
     border: 1px solid #ff9800;
+    text-align: center;
+    color: white;
+    margin-top: 50px;
 }
 
 .form-in{
     padding: 3px;
     color:#ff9800;
+
 }
 
 label{
@@ -17,16 +20,24 @@ label{
 .header{
 text-align: center;
 text-transform: uppercase;
-color: #f44336;
+color: #ff9800;
+font-size: 60px;
 }
 
 .card-header
 {
-    align-content: center;
+   text-align: center;
     background-color: #ff9800 !important;
 }
 
 .inputstyle
 {
-    border: 1px solid #ff9800;
+    border: 1px solid #ff9800 !important;
+}
+
+.button
+{
+    background-color: #ff9800;
+    color: white;
+    width: 120px;
 }
