--- a/src/app/components/domaines/domaines.component.html
+++ b/src/app/components/domaines/domaines.component.html
@@ -2,9 +2,12 @@
 <!------ Include the above in your HEAD tag ---------->
 <div class="section">
     <div class="container">
+        <h1>
+            <span class="">DOMAINES DES</span><span class="">BACKELISTES</span>
+        </h1>
      	<div class="row">
 
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 				<a href="">	<div class="box-part text-center">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="50" height="50"
@@ -20,13 +23,13 @@
           </a>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 					<a href=""> <div class="box-part text-center">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="50" height="50"
             viewBox="0 0 192 192"
             style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,192v-192h192v192z" fill="none"></path><g fill="#ff9800"><g id="surface1"><path d="M38.16,2.04l-36.12,36.12l57.36,57.12l36,-36l-5.52,-5.52l-14.16,14.28l-5.52,-5.52l14.28,-14.16l-6.12,-6.12l-10.32,10.44l-5.52,-5.52l10.44,-10.32l-6.12,-6.12l-14.16,14.28l-5.52,-5.52l14.28,-14.16l-6.12,-6.12l-10.32,10.44l-5.52,-5.52l10.44,-10.32zM165.6,7.68c-4.785,0 -9.555,1.875 -13.2,5.52l-6.84,6.72l-80.76,80.76l-47.76,47.88c-0.765,0.51 -1.32,1.275 -1.56,2.16l-7.68,28.8c-0.345,1.32 0.045,2.715 1.005,3.675c0.96,0.96 2.355,1.35 3.675,1.005l28.8,-7.68c0.645,-0.21 1.23,-0.585 1.68,-1.08l0.24,-0.12c0.18,-0.18 0.345,-0.39 0.48,-0.6l128.4,-128.28v-0.12l2.52,-2.52c1.98,-1.98 4.2,-4.2 4.2,-4.2c7.29,-7.305 7.29,-19.11 0,-26.4c-3.66,-3.645 -8.415,-5.52 -13.2,-5.52zM165.6,15.36c2.94,0 5.73,1.17 7.8,3.24c4.29,4.29 4.29,11.31 0,15.6c-0.495,0.495 -0.9,0.9 -1.32,1.32l-15.6,-15.6l1.32,-1.32c2.085,-2.085 4.86,-3.24 7.8,-3.24zM135.96,99l-10.32,10.32l-3.24,-3.24l-25.8,25.8l57.24,57.24l36.12,-36.12l-7.92,-7.92l-10.32,10.32l-5.52,-5.4l10.44,-10.44l-6.12,-6l-14.16,14.16l-5.52,-5.4l14.28,-14.28l-6.12,-6l-10.32,10.32l-5.52,-5.4l10.44,-10.44l-6.12,-6l-14.16,14.16l-5.52,-5.4l14.28,-14.28zM21.24,159.12l11.64,11.64l-15.96,4.32z"></path></g></g></g></svg>            <div class="title">
-              <h3>Design</h3>
+              <h3>Design Graphique</h3>
               <hr>
 						</div>
 						<div class="text">
@@ -35,11 +38,8 @@
            </div>
           </a>
 				</div>
-      </div>
 
-      <div class="row">
-
-       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 				<a href=""> 	<div class="box-part text-center">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="50" height="50"
@@ -55,7 +55,7 @@
           </a>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 				<a href="">	<div class="box-part text-center">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="50" height="50"
