--- a/src/app/components/page-couverture-accueil/page-couverture-accueil.component.html
+++ b/src/app/components/page-couverture-accueil/page-couverture-accueil.component.html
@@ -1,17 +1,21 @@
-<section>
+<section id="home-page-couverture">
 	<div class="container">
-		<div class="bienvenue">
+		<h1 class="bienvenue">
 			Bakeli Talent
-		</div>
+		</h1>
 		<div class="col-md-6 offset-md-3 search-container">
     		<form>
-    			<input type="text" name="Rechercher une compétence/un profil" placeholder="Rechercher une compétence/un profil...">
-    			<button> <img src="https://image.flaticon.com/icons/svg/115/115730.svg"></button>
+    			<div class="ui fluid icon input">
+					<input type="text" placeholder="Rechercher une compétence">
+					<i class="search icon"></i>
+				  </div>
     			
     		</form>
   		</div>
 		
 	</div>
+
+	<div class="filtre"></div>
 	
 </section>
 
