--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<app-how-to-work></app-how-to-work>
-=======
+<app-page-couverture-accueil></app-page-couverture-accueil>
 <app-domaines></app-domaines>
->>>>>>> d3e6933bf68ac54c44a4f54d85d17540563bb56c
+<app-how-to-work></app-how-to-work>
+
