--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<section class="row">
+<section class="row" id="formulaireContact">
     <div class="container-fluid">
         <div class="card form-content col-md-12 shadow-lg p-3 mb-5 bg-white rounded">
             <div class="card-header">
@@ -6,13 +6,7 @@
             <span class="fa fa-comments"></span>&nbsp;&nbsp;Contactez nous!</h1>
             </div>
             <div class="row">
-            <div class="col-md-5 ui inverted form">
-                <div class="field">
-                    <label>Text</label>
-                    <textarea placeholder=" Votre text ici"></textarea>
-                  </div>
-            </div>
-            <div class="col-md-5 ui inverted form">
+            <div class="col-md-5 ui inverted form partie">
                 <div class="two fields">
                     <div class="field">
                       <input  class="inputstyle" placeholder="Prenom"  name="first_name" type="text">
@@ -31,6 +25,31 @@
                       </div>
                     </div>
                     <hr>
+                <div class="field">
+                    <label>Text</label>
+                    <textarea placeholder=" Votre text ici"></textarea>
+                  </div>
+                  <div class="ui submit button">Envoyer</div>
+            </div>
+            
+            <div class="col-md-6 ui inverted form">
+                <p> 
+                    <i class="fa fa-map-marker fa-2x" ></i>&nbsp;&nbsp;<br>
+                    Grand Yoff 2</p>
+              <hr>
+               
+                  <i class="fa fa-globe fa-2x" aria-hidden="true"></i><br>
+                  <a >www.bakeli.tech</a>
+                  <hr>
+                  
+                      <i class="fa fa-at fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;<br>
+                      <a> contact@bakeli.tech</a>
+                      <hr>
+                      <img src="https://img.icons8.com/doodle/48/000000/facebook-circled.png" >
+                    <img src="https://img.icons8.com/color/48/000000/instagram-new.png">
+                    
+                    <!-- <i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i> -->
+                    <!-- <i class="fa fa-instagram fa-5x" aria-hidden="true"></i> -->
             </div>
             
           </div>
