--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.html
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.html
@@ -1,4 +1,4 @@
-<section class="row">
+<section class="row" id = "inscriptionRecruteur">
 <div class="container">
     <h1 class="header">Welcome to Bakeli Talents</h1>
     <div class="card form-content col-md-6 offset-md-3 shadow-lg p-3 mb-5 bg-white rounded">
@@ -41,13 +41,14 @@
                   <input class="inputstyle" placeholder="Domaine Professionnel" nom="domaine_pro" type="text">
                 </div>
               </div>
+              <a href="#">Connectez vous ici!</a><br><br>
       <!-- <div class="inline field">
         <div class="ui checkbox">
           <input type="checkbox" tabindex="0" class="hidden">
           <label>I agree to the terms and conditions</label>
         </div>
       </div> -->
-      <div class="ui submit button">Submit</div>
+      <div class="ui submit button">S'inscrire</div>
     </div>
   </div>
     </div>
