--- a/src/app/components/carroussel/carroussel.component.html
+++ b/src/app/components/carroussel/carroussel.component.html
@@ -1,3 +1,4 @@
+<section>
 <div class="container">
   <div class="row">
 <h1>
@@ -95,4 +96,18 @@
  <!--.Carousel-->
 </div>
 </div>
+
 </div>
+<div class="container">
+<div class="row">
+  <div class="col-md-5 col-sm-6 col-xs-6"></div>
+  <div class="col-md-5 col-sm-5 col-xs-5">
+
+    <a routerLink=""><button class="btn btn-primary text-center">TOUS LES  BACKELISTES</button></a>
+  </div>
+</div>
+</div>
+
+</section>
+
+<hr>
