image d'accueil téléchargée

--- a/src/app/components/page-couverture-accueil/page-couverture-accueil.component.css
+++ b/src/app/components/page-couverture-accueil/page-couverture-accueil.component.css
@@ -1,5 +1,5 @@
 section{
-	background-image: url("https://cdn.pixabay.com/photo/2018/02/14/10/28/business-3152586_960_720.jpg");
+	background-image: url("image-couverture-accueil.jpg");
 	background-size: cover;
 	background-attachment: fixed;
 	height: 550px;
