--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,15 +15,15 @@
     </ul>
     <ul class="right-nav-talent">
       <li>
-        <a href="#">
+        <a href="/connexion">
           <i class="fas fa-sign-in-alt"></i>
           Se connecter
         </a>
       </li>
       <li>
-        <a href="#">
-            <i class="fas fa-sign-in-alt"></i>
-          Créer un compte
+        <a href="/inscription-recruteur">
+            <i class="fas fa-user-plus"></i>
+          S'inscrire
         </a>
       </li>
     </ul>
