--- a/src/app/components/all-profil/all-profil.component.html
+++ b/src/app/components/all-profil/all-profil.component.html
@@ -9,4 +9,13 @@
         <input type="text" value="Titre: Développeur">
       </form>
   </div>
+  <div class="profil1">
+      <form>
+        <div class="ui small image">
+          <img src="https://image.flaticon.com/icons/svg/1602/1602968.svg">
+        </div>
+        <input type="text" value="Maimouna Diallo">
+        <input type="text" value="Titre: Développeur">
+      </form>
+  </div>
 </section>
