--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,13 +15,13 @@
     </ul>
     <ul class="right-nav-talent">
       <li>
-        <a href="/connexion">
+        <a [routerLink]="['/connexion']">
           <i class="fas fa-sign-in-alt"></i>
           Se connecter
         </a>
       </li>
       <li>
-        <a href="/inscription-recruteur">
+        <a [routerLink]="['/inscription-recruteur']">
             <i class="fas fa-user-plus"></i>
           S'inscrire
         </a>
