component Liste des bakéliste par Domaine

--- a/src/app/components/how-to-work/how-to-work.component.css
+++ b/src/app/components/how-to-work/how-to-work.component.css
@@ -9,10 +9,10 @@
 .fa-chevron-right{
     margin-left: 0px;
     color: #f44336;
-    margin-top: 150%;
+    
     
 }
 
-section {
+#howtowork {
     padding: 60px 0px;
 }
