--- a/src/app/components/how-to-work/how-to-work.component.html
+++ b/src/app/components/how-to-work/how-to-work.component.html
@@ -1,8 +1,8 @@
 
-<section>
+<section id="howtowork">
   <div class="container">
     <div class="row justify-content-md-center">
-      <div class="col-3">
+      <div class="col-md-3">
         <div class="ui card">
           <div class="image ">
              <!--<img src="/images/avatar2/large/kristy.png">-->
@@ -16,10 +16,10 @@
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col">
         <i class="fas fa-chevron-right"></i>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <div class="ui card">
           <div class="image">
             <!--<img src="/images/avatar2/large/kristy.png">-->
@@ -33,10 +33,10 @@
           </div>
         </div>
       </div>
-      <div class="col-1">
+      <div class="col">
         <i class="fas fa-chevron-right"></i>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <div class="ui card">
           <div class="image">
              <!--<img src="/images/avatar2/large/kristy.png">-->
@@ -53,3 +53,4 @@
     </div>
   </div>
 </section>
+<hr>
