--- a/src/app/components/bakeliste-profile/bakeliste-profile.component.html
+++ b/src/app/components/bakeliste-profile/bakeliste-profile.component.html
@@ -4,7 +4,7 @@
         <div class="header_top">
             <div class="toggle_icon hidden-xs"><span class="lnr lnr-menu"></span></div>
             <div class="head_img_wrap">
-                <img src="images/person.png" alt="Images">
+                <img src="/assets/images/empty-avatar.png" alt="Images">
             </div>
             <p class="name">Sadio Sangharé</p>
         </div>
