--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,9 +1,6 @@
-<<<<<<< HEAD
-<app-domaines></app-domaines>
-<app-carroussel></app-carroussel>
-=======
 <app-page-couverture-accueil></app-page-couverture-accueil>
 <app-domaines></app-domaines>
+<app-carroussel></app-carroussel>
 <app-how-to-work></app-how-to-work>
+<app-contact-form></app-contact-form>
 
->>>>>>> 5ddb3ea9cf59bb5ba14d6bcd9ba2b54c3fbc18e4
