--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,12 +1,12 @@
 <section class="row" id="formulaireContact">
-    <div class="container-fluid">
-        <div class="card form-content col-md-12 shadow-lg p-3 mb-5 bg-white rounded">
-            <div class="card-header">
-        <h1>
-            <span class="fa fa-comments"></span>&nbsp;&nbsp;Contactez nous!</h1>
-            </div>
+    <div class="container">
+            <h1>
+                <span class="">CONTACTEZ-</span><span class="orange">NOUS</span>
+            </h1>
+            <div class="card form-content col-md-12 shadow-lg p-3 mb-5 bg-white rounded">
             <div class="row">
             <div class="col-md-5 ui inverted form partie">
+              <h2>Envoyer un message</h2>
                 <div class="two fields">
                     <div class="field">
                       <input  class="inputstyle" placeholder="Prenom"  name="first_name" type="text">
@@ -33,6 +33,7 @@
             </div>
             
             <div class="col-md-6 ui inverted form">
+                <h2>Nos informations</h2>
                 <p> 
                     <i class="fa fa-map-marker fa-2x" ></i>&nbsp;&nbsp;<br>
                     Grand Yoff 2</p>
